@@ -21,7 +21,6 @@
 #undef NEED_QUOTACTL_WRAPPER
 #undef NO_CRYPT_H
 #undef NO_DDP
-#undef NO_DLFCN_H
 #undef NO_STRUCT_TM_GMTOFF
 #undef OPENSSL_DHX
 #undef SENDFILE_FLAVOR_BSD
